improved the design

--- a/app/src/main/res/layout/common_settings_dialog.xml
+++ b/app/src/main/res/layout/common_settings_dialog.xml
@@ -17,7 +17,7 @@
                 android:textSize="15sp"
                 android:textColor="@color/black"
                 android:textStyle="bold"
-                android:text="@string/edit_profile">
+                android:text="@string/settings">
 
             </com.google.android.material.textview.MaterialTextView>
 
@@ -31,6 +31,20 @@
         android:layout_height="wrap_content" />
 
 
+
+
+    <com.google.android.material.button.MaterialButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_gravity="center_horizontal"
+        app:backgroundTint="@color/red"
+        style="@style/ButtonProfile"
+        android:drawableEnd="@drawable/ic_exit"
+        android:text="@string/exit"
+        >
+
+    </com.google.android.material.button.MaterialButton>
 
 
 
