--- a/app/src/main/res/layout/profile_settings_dialog.xml
+++ b/app/src/main/res/layout/profile_settings_dialog.xml
@@ -153,7 +153,7 @@
         <com.google.android.material.textview.MaterialTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/hint_bithday"
+            android:text="@string/hint_birthday"
             android:textStyle="bold">
 
         </com.google.android.material.textview.MaterialTextView>
