--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,11 +2,12 @@
 
     <style name="Base.Theme.Linksy" parent="Theme.MaterialComponents.Light.NoActionBar">
         <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="android:statusBarColor">@color/colorPrimary</item>
+        <item name="android:statusBarColor">@color/white</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:textColorPrimary">@color/white</item>
         <item name="android:textAllCaps">false</item>
         <item name="colorControlActivated">@color/colorPrimary</item>
+        <item name="android:windowLightStatusBar">true</item>
     </style>
 
     <style name="Theme.Linksy" parent="Base.Theme.Linksy" />
@@ -112,7 +113,7 @@
     </style>
 
     <style name="ButtonProfile" parent="Widget.Material3.Button">
-        <item name="android:textSize">20sp</item>
+        <item name="android:textSize">22sp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:fontFamily">@font/klukva</item>
     </style>
@@ -128,8 +129,7 @@
         <item name="tabSelectedTextColor">@color/tabSelectedTextColor</item>
         <item name="tabIndicatorColor">@color/tabIndicatorColor</item>
     </style>
-    <style name="FullScreenDialog" parent="Theme.Material3.Light.Dialog">
-        <item name="android:windowFullscreen">true</item>
+    <style name="FullScreenDialog" parent="Theme.Linksy">
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowBackground">@color/white</item>
     </style>
