--- a/app/src/main/res/drawable/ic_pencil.xml
+++ b/app/src/main/res/drawable/ic_pencil.xml
@@ -1,18 +1,18 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="28dp"
-    android:height="28dp"
+    android:width="15dp"
+    android:height="15dp"
     android:viewportWidth="28"
     android:viewportHeight="28">
   <path
-      android:fillColor="#FF000000"
+      android:fillColor="@color/dark_gray"
       android:pathData="m22.1,2.8c-0.6,-0.5 -1.3,-0.8 -2.1,-0.8s-1.6,0.3 -2.2,0.9l-1.2,1.2 7.3,7.4 1.3,-1.3c1.2,-1.2 1.2,-3.1 0,-4.3z"/>
   <path
-      android:fillColor="#FF000000"
+      android:fillColor="@color/dark_gray"
       android:pathData="m22.5,12.9 l-3,-3 -10.8,10.8 3,3z"/>
   <path
-      android:fillColor="#FF000000"
+      android:fillColor="@color/dark_gray"
       android:pathData="m18.1,8.5 l-3,-3 -10.8,10.8 3,3z"/>
   <path
-      android:fillColor="#FF000000"
+      android:fillColor="@color/dark_gray"
       android:pathData="m3.8,26 l6.2,-1.2 -6.8,-6.8 -1.2,6.2c-0.1,0.5 0.1,1 0.4,1.4 0.4,0.4 0.9,0.5 1.4,0.4z"/>
 </vector>
