--- a/app/src/main/res/drawable/rounded_edit_text_immutable.xml
+++ b/app/src/main/res/drawable/rounded_edit_text_immutable.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="5dp" />
-    <solid android:color="@color/white" />
+    <solid android:color="@color/edit_text_background_default_color" />
     <stroke
         android:width="2dp"
-    android:color="@color/soft_gray" />
+        android:color="@color/soft_gray" />
 </shape>
