--- a/app/src/main/res/layout/common_settings_dialog.xml
+++ b/app/src/main/res/layout/common_settings_dialog.xml
@@ -27,6 +27,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_settings"
         android:layout_width="match_parent"
+        android:layout_marginTop="20dp"
       android:paddingHorizontal="20dp"
         android:layout_height="wrap_content" />
 
