--- a/app/src/main/res/layout/fragment_password_recovery.xml
+++ b/app/src/main/res/layout/fragment_password_recovery.xml
@@ -108,7 +108,7 @@
                 android:id="@+id/et_new_password"
                 style="@style/EditTextStyle"
                 android:inputType="textPassword"
-                android:hint="@string/new_password">
+                android:hint="@string/hint_new_password">
             </EditText>
 
             <ImageView
