--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -34,6 +34,19 @@
         <item name="android:textColor">@color/black</item>
         <item name="android:textColorHint">@color/edit_text_hint_color</item>
     </style>
+
+    <style name="EditTextImmutableStyle" >
+        <item name="android:fontFamily">@font/klukva</item>
+        <item name="android:background">@drawable/rounded_edit_text_immutable</item>
+        <item name="android:drawableEnd">@drawable/ic_lock</item>
+        <item name="android:padding">10dp</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">40dp</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textColorHint">@color/edit_text_hint_color</item>
+    </style>
+
+
     <style name="LandscapeEditTextStyle" >
         <item name="android:fontFamily">@font/klukva</item>
         <item name="android:background">@drawable/rounded_edit_text</item>
