--- a/app/src/main/res/layout/profile_settings_dialog.xml
+++ b/app/src/main/res/layout/profile_settings_dialog.xml
@@ -70,8 +70,6 @@
         android:id="@+id/shimmer_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
-
         >
 
 
@@ -120,6 +118,46 @@
 
                 >
             </EditText>
+
+        <com.google.android.material.textview.MaterialTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="@string/hint_link"
+            android:textStyle="bold">
+
+        </com.google.android.material.textview.MaterialTextView>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" >
+
+            <com.google.android.material.textview.MaterialTextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginTop="10dp"
+                android:text="\@"
+                android:gravity="start"
+                android:textStyle="bold">
+
+            </com.google.android.material.textview.MaterialTextView>
+
+            <EditText
+                style="@style/EditTextChangeStyle"
+                android:layout_marginTop="3dp"
+                android:layout_marginStart="3dp"
+                android:alpha="0.4"
+                android:inputType="date">
+            </EditText>
+        </LinearLayout>
+
+
+
+
+
+
+
 
             <com.google.android.material.textview.MaterialTextView
                 android:layout_width="wrap_content"
@@ -177,7 +215,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingHorizontal="20dp"
-        android:visibility="gone"
+android:visibility="gone"
         android:orientation="vertical"
         >
 
@@ -223,6 +261,37 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
+            android:text="@string/hint_link"
+            android:textStyle="bold">
+
+        </com.google.android.material.textview.MaterialTextView>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" >
+
+            <com.google.android.material.textview.MaterialTextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginTop="10dp"
+                android:text="\@"
+                android:gravity="start"
+                android:textStyle="bold">
+
+            </com.google.android.material.textview.MaterialTextView>
+        <EditText
+            android:id="@+id/et_link"
+            style="@style/EditTextChangeStyle"
+            android:layout_marginTop="3dp"
+            android:layout_marginStart="3dp"
+            android:inputType="date">
+        </EditText>
+        </LinearLayout>
+        <com.google.android.material.textview.MaterialTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             android:text="@string/hint_birthday"
             android:textStyle="bold">
 
@@ -232,6 +301,7 @@
                 android:id="@+id/et_birthday"
                 style="@style/EditTextChangeStyle"
                 android:layout_marginTop="3dp"
+                android:hint="--.--.----"
                 android:inputType="date">
             </EditText>
 
