added the ability to change the password in the profile settings

--- a/app/src/main/res/layout/password_change_dialog.xml
+++ b/app/src/main/res/layout/password_change_dialog.xml
@@ -17,6 +17,7 @@
             android:textSize="15sp"
             android:textColor="@color/black"
             android:textStyle="bold"
+
             android:text="@string/change_password_title">
 
         </com.google.android.material.textview.MaterialTextView>
@@ -39,13 +40,35 @@
             android:textStyle="bold">
         </com.google.android.material.textview.MaterialTextView>
 
-        <EditText
-            style="@style/EditTextChangeStyle"
-            android:id="@+id/et_username"
-            android:inputType="textPassword">
-        </EditText>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_marginTop="3dp"
+            >
+
+            <EditText
+                style="@style/EditTextChangeStyle"
+                android:id="@+id/et_old_password"
+                android:inputType="textPassword">
+            </EditText>
 
 
+            <ImageView
+                android:id="@+id/iv_old_password_change_input_type"
+                style="@style/ButtonInEditTextStyle"
+                android:src="@drawable/show_password"
+                />
+
+        </RelativeLayout>
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/tv_error_password_wrong"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            style="@style/TextErrorStyle"
+            android:layout_gravity="center_horizontal"
+            android:text="@string/wrong_password">
+
+        </com.google.android.material.textview.MaterialTextView>
 
 
         <com.google.android.material.textview.MaterialTextView
@@ -59,12 +82,26 @@
 
 
 
-        <EditText
-            style="@style/EditTextChangeStyle"
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
             android:layout_marginTop="3dp"
-            android:inputType="textPassword"
             >
-        </EditText>
+
+            <EditText
+                style="@style/EditTextChangeStyle"
+                android:id="@+id/et_new_password"
+                android:inputType="textPassword">
+            </EditText>
+
+
+            <ImageView
+                android:id="@+id/iv_new_password_change_input_type"
+                style="@style/ButtonInEditTextStyle"
+                android:src="@drawable/show_password"
+                />
+
+        </RelativeLayout>
 
         <com.google.android.material.textview.MaterialTextView
             android:layout_width="wrap_content"
@@ -75,20 +112,49 @@
 
         </com.google.android.material.textview.MaterialTextView>
 
-        <EditText
-            android:id="@+id/et_birthday"
-            style="@style/EditTextChangeStyle"
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
             android:layout_marginTop="3dp"
-            android:inputType="textPassword">
-        </EditText>
+            >
 
+            <EditText
+                style="@style/EditTextChangeStyle"
+                android:id="@+id/et_confirm_new_password"
+                android:inputType="textPassword">
+            </EditText>
+
+
+            <ImageView
+                android:id="@+id/iv_confirm_new_password_change_input_type"
+                style="@style/ButtonInEditTextStyle"
+                android:src="@drawable/show_password"
+                />
+
+        </RelativeLayout>
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/tv_error_password_mismatch"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            style="@style/TextErrorStyle"
+            android:text="@string/passwords_do_not_match">
+
+        </com.google.android.material.textview.MaterialTextView>
+
+        <include
+            android:id="@+id/tv_error_password_short"
+            layout="@layout/password_short_text"
+
+            />
         <com.google.android.material.button.MaterialButton
+            android:id="@+id/bt_change"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:enabled="false"
             android:layout_marginTop="10dp"
-            android:text="Change">
+            android:text="@string/change">
 
         </com.google.android.material.button.MaterialButton>
     </LinearLayout>
