--- a/app/src/main/res/layout/password_short_text.xml
+++ b/app/src/main/res/layout/password_short_text.xml
@@ -3,6 +3,7 @@
     android:id="@+id/tv_error_password_short"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:layout_gravity="center_horizontal"
     style="@style/TextErrorStyle"
     android:text="@string/password_length_short"
     xmlns:android="http://schemas.android.com/apk/res/android">
