--- a/app/src/main/res/layout/add_post_dialog.xml
+++ b/app/src/main/res/layout/add_post_dialog.xml
@@ -59,6 +59,7 @@
 
 
     <EditText
+        android:id="@+id/et_post"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
@@ -75,6 +76,7 @@
 
     </EditText>
     <com.google.android.material.button.MaterialButton
+        android:id="@+id/bt_publish"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end"
