--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -25,7 +25,7 @@
     <color name="newPost_button">#084F70</color>
     <color name="nav_default">#A1A1A1</color>
     <color name="nav_active">#074F70</color>
-    <color name="post_edit_text">#FBFBFB</color>
+    <color name="post_edit_text">#FDFDFD</color>
     <color name="change_icon">#B6B6B6</color>
 
 
